syntax = "proto3";

package fd.persistence;

option go_package = "fd.persistence";

message FraudDetectionReport {
  bool potential_fraud = 1;
  int32 risk_score = 2;
  string rule_id = 3;
}
message Transaction {
  string trans_id = 1;
  int64 timestamp = 2;
  int32 amount_cents = 3;
  FraudDetectionReport fraud_report = 4;
}

message FraudDetectionRule {
  string rule_id = 1;
  int32 max_amount_cents = 2;
  int32 trans_backtrack_hours = 3;
}

//state
message Customer {
  FraudDetectionRule rule = 1;
  repeated Transaction trans = 2;
}

//events
message CustomerCreated {
  Customer customer = 1;
}

message TransactionAdded {
  Transaction trans = 1;
}
message TransactionRemoved {
  string trans_id = 1;
}

message FraudDetectionRuleUpdated {
  FraudDetectionRule rule = 1;
}